@@ -16,8 +16,6 @@ android {
         applicationId 'net.valentinc.uppa.planning'
         minSdkVersion 8
         targetSdkVersion 21
-        testPackageName "net.valentinc.uppa.planning.test"
-        testInstrumentationRunner "net.valentinc.uppa.planning.test.androidTest"
     }
     buildTypes {
         release {
@@ -34,18 +32,6 @@ android {
         }
 
     }
-    configurations {
-        unitTestCompile.extendsFrom runtime
-        unitTestRuntime.extendsFrom unitTestCompile
-    }
-
-    task unitTest(type:Test, dependsOn: assemble) {
-        description = "run unit tests"
-        testClassesDir = project.sourceSets.unitTest.output.classesDir
-        classpath = project.sourceSets.unitTest.runtimeClasspath
-    }
-
-    build.dependsOn unitTest
     lintOptions {
         abortOnError false
     }
@@ -53,11 +39,4 @@ android {
 dependencies {
     testCompile 'junit:junit:4.+'
     testCompile "org.mockito:mockito-core:1.9.5"
-}
-
-testOptions {
-    unitTests.all {
-        // All the usual Gradle options.
-        jvmArgs '-XX:MaxPermSize=1024m'
-    }
 }
